# Tools

./: STD_sliding_window_update.py
CA_CFAR_CUDA/: CA_CFAR_CUDA.py
CA_CFAR_CUDA/Tests/: Benchmark_Test_CA_CFAR.py  CA_CFAR_CUDA.md
CPP_NUC/: NUC.py  nuc.cpp  nuc.hpp  nuc_wrapper.pyx  setup.py
CPP_NUC/NUC_CPP_fp32/: nuc.cpp  nuc.hpp  nuc_wrapper.pyx  setup.py  usage.txt
CPP_NUC/Pure__CPP/: CMakeLists.txt  HowTo.MD  fast_nuc.cpp  fast_nuc.hpp  main.cpp
CPP_NUC/PyBind_CPP_NUC16/: CMakeLists.txt  fast_nuc.cpp  fast_nuc.hpp  python_wrapper.cpp  test.py
CPP_NUC/PyBind_CPP_NUC32/: HowTo.MD  fast_nuc.cpp  fast_nuc.hpp  python_wrapper.cpp  test.py
Detection/: AutoEncoderDetect.py  Convolution_and_thresholding_cuda.py  DoB.py  Images_Difference_Detection.py  blob_thesholding.py  create_scaled_gaussian_kernel.py
ImageClassification/: ResNetLike.py  image-classification-networks.py
ImageFinder/: instructions.MD  test.py
ImageFinder/Backend/: build_index.py  faiss_persistence.py  search.py  search_runtime.py  skeleton.py
ImageFinder/Frontend/: google_oauth_setup.py  google_photos_client.py  ingest_photos.py  ms_oauth_setup.py
MCP/: mcp_agent.py
Registrartion/: Image_Interpolation.py  README.md
SuperResolution/: Multi_Imgae_Super.py
TemplateFinding/: TemplateMatchin_TensorFlow.py  TemplateMatching_Torch.py
U_Net_change_DET/: README.md  generate_dataset.py  inference.py  train_unet.py
imageFiltering/: ImageFiltering.py  README.md  explaination.txt
simulation/: circle_with_noise.py  forth.py  third.py
